// Vitest Snapshot v1

exports[`Input > Input alignVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        左对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        居中
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--center t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        右对齐
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input bannerVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--size-small t-input--border input-demo"
  data-v-378bb8e9=""
>
  <div
    class="t-input__wrap--prefix"
  >
    <div
      class="t-input__icon--prefix"
    >
      <!--v-if-->
    </div>
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > Input baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字(选填)"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input borderedVue demo works fine 1`] = `
<div
  class="input-demo"
  data-v-0b3942c8=""
>
  <div
    class="input-demo__summary"
    data-v-0b3942c8=""
  >
    标签文字
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small custom-input"
    data-v-0b3942c8=""
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-error-circle-filled"
            data-v-0b3942c8=""
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Input > Input customVue demo works fine 1`] = `
<div
  class="input-demo"
  data-v-16c31aae=""
>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
    data-v-16c31aae=""
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`Input > Input labelVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
>
  <div
    class="t-input__wrap--prefix"
  >
    <div
      class="t-input__icon--prefix"
    >
      <!--v-if-->
    </div>
    <div
      class="t-input__label"
    >
      标签超长时最多十个字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > Input layoutVue demo works fine 1`] = `
<div
  class="t-input t-input--layout-vertical t-input--size-small t-input--border"
>
  <div
    class="t-input__wrap--prefix"
  >
    <div
      class="t-input__icon--prefix"
    >
      <!--v-if-->
    </div>
    <div
      class="t-input__label"
    >
      标签文字
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input__content t-input--default"
    >
      <input
        autocomplete="Off"
        class="t-input__control t-input--default"
        maxlength="-1"
        name=""
        placeholder="请输入文字"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
      <div
        class="t-input__wrap--suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-error-circle-filled"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`Input > Input maxLengthVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="10"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符
      </div>
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        最大输入10个字符，汉字算两个
      </div>
    </div>
  </div>
  
</div>
`;

exports[`Input > Input mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Input 输入框
  </h1>
  <p
    class="summary"
  >
    用于单行文本信息输入。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字(选填)"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带字数限制输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="10"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符
          </div>
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            最大输入10个字符，汉字算两个
          </div>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带操作输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-info-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入手机号码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
                role="button"
                type="button"
              >
                <!---->
                <span
                  class="t-button__content"
                >
                  
                   操作按钮 
                  
                </span>
                <!---->
              </button>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-user-avatar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M8 10.5c1.24 0 2.42.31 3.5.88v1.12h1v-1.14a.94.94 0 00-.49-.84 8.48 8.48 0 00-8.02 0 .94.94 0 00-.49.84v1.14h1v-1.12A7.47 7.47 0 018 10.5zM10.5 6a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm-1 0a1.5 1.5 0 10-3 0 1.5 1.5 0 003 0z"
                  fill="currentColor"
                />
                <path
                  d="M2.5 1.5a1 1 0 00-1 1v11a1 1 0 001 1h11a1 1 0 001-1v-11a1 1 0 00-1-1h-11zm11 1v11h-11v-11h11z"
                  fill="currentColor"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            
            <svg
              class="t-icon t-icon-app"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </div>
          <div
            class="t-input__label"
          >
            <!---->
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        特定类型输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            输入密码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              type="password"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-browse-off"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            验证码
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="输入验证码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                class="suffix"
              >
                <div
                  class="suffix--line"
                />
                <div
                  aria-label="验证码"
                  aria-role="img"
                  class="t-image t-image--square image"
                  mode="heightFix"
                >
                  <div
                    class="t-image__mask"
                  >
                    <div
                      class="t-loading"
                      style="font-size: 20px;"
                    >
                      <div
                        class="t-loading__dots"
                        style="animation-duration: 800ms; width: 20px; height: 20px;"
                      >
                        
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0s;"
                        />
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                        />
                        <div
                          class="t-loading__dot"
                          style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                        />
                        
                      </div>
                      <!--v-if-->
                      <!---->
                    </div>
                  </div>
                  <picture>
                    <!--v-if-->
                    <img
                      alt=""
                      class="t-image__img"
                      src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
                      style="object-fit: fill; object-position: center;"
                    />
                  </picture>
                </div>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            手机号
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="输入手机号码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                class="suffix"
              >
                <div
                  class="suffix--line"
                />
                <div
                  aria-role="button"
                  class="verify"
                >
                  发送验证码
                </div>
              </div>
              
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            价格
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              maxlength="-1"
              name=""
              placeholder="0.00"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              元
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            数量
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              maxlength="-1"
              name=""
              placeholder="填写个数"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              个
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        输入框状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--error"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--error"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__tips t-input--left"
          >
            辅助说明
          </div>
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            不可编辑
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default t-input__control--disabled"
              disabled=""
              maxlength="-1"
              name=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        信息超长状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签超长时最多十个字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        内容位置
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            左对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            居中
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--center t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            右对齐
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--right t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        竖排样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-vertical t-input--size-small t-input--border"
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <div
              class="t-input__wrap--suffix-icon"
            >
              
              <svg
                class="t-icon t-icon-error-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              
            </div>
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        非通栏样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-input t-input--layout-horizontal t-input--size-small t-input--border input-demo"
        data-v-378bb8e9=""
      >
        <div
          class="t-input__wrap--prefix"
        >
          <div
            class="t-input__icon--prefix"
          >
            <!--v-if-->
          </div>
          <div
            class="t-input__label"
          >
            标签文字
          </div>
        </div>
        <div
          class="t-input__wrap"
        >
          <div
            class="t-input__content t-input--default"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input--default"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        标签外置样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="input-demo"
        data-v-0b3942c8=""
      >
        <div
          class="input-demo__summary"
          data-v-0b3942c8=""
        >
          标签文字
        </div>
        <div
          class="t-input t-input--layout-horizontal t-input--size-small custom-input"
          data-v-0b3942c8=""
        >
          <div
            class="t-input__wrap--prefix"
          >
            <div
              class="t-input__icon--prefix"
            >
              <!--v-if-->
            </div>
            <div
              class="t-input__label"
            >
              <!---->
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                maxlength="-1"
                name=""
                placeholder="请输入文字"
                type="text"
              />
              <!--v-if-->
              <!--v-if-->
              <div
                class="t-input__wrap--suffix-icon"
              >
                
                <svg
                  class="t-icon t-icon-error-circle-filled"
                  data-v-0b3942c8=""
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
                
              </div>
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义样式输入框
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="input-demo"
        data-v-16c31aae=""
      >
        <div
          class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
          data-v-16c31aae=""
        >
          <div
            class="t-input__wrap--prefix"
          >
            <div
              class="t-input__icon--prefix"
            >
              <!--v-if-->
            </div>
            <div
              class="t-input__label"
            >
              标签文字
            </div>
          </div>
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input__content t-input--default"
            >
              <input
                autocomplete="Off"
                class="t-input__control t-input--default"
                maxlength="-1"
                name=""
                placeholder="请输入文字"
                type="text"
              />
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Input > Input prefixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        
        <svg
          class="t-icon t-icon-app"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.25 1.75a3 3 0 100 6 3 3 0 000-6zm-2 3a2 2 0 114 0 2 2 0 01-4 0zM2 3a1 1 0 011-1h3.5a1 1 0 011 1v3.5a1 1 0 01-1 1H3a1 1 0 01-1-1V3zm1 0v3.5h3.5V3H3zM2 9.5a1 1 0 011-1h3.5a1 1 0 011 1V13a1 1 0 01-1 1H3a1 1 0 01-1-1V9.5zm1 0V13h3.5V9.5H3zM8.5 9.5a1 1 0 011-1H13a1 1 0 011 1V13a1 1 0 01-1 1H9.5a1 1 0 01-1-1V9.5zm1 3.5H13V9.5H9.5V13z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </div>
      <div
        class="t-input__label"
      >
        <!---->
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input specialVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        输入密码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          type="password"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-browse-off"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        验证码
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="输入验证码"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            class="suffix"
          >
            <div
              class="suffix--line"
            />
            <div
              aria-label="验证码"
              aria-role="img"
              class="t-image t-image--square image"
              mode="heightFix"
            >
              <div
                class="t-image__mask"
              >
                <div
                  class="t-loading"
                  style="font-size: 20px;"
                >
                  <div
                    class="t-loading__dots"
                    style="animation-duration: 800ms; width: 20px; height: 20px;"
                  >
                    
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                    />
                    <div
                      class="t-loading__dot"
                      style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                    />
                    
                  </div>
                  <!--v-if-->
                  <!---->
                </div>
              </div>
              <picture>
                <!--v-if-->
                <img
                  alt=""
                  class="t-image__img"
                  src="https://wwcdn.weixin.qq.com/node/wework/images/202010241547.ac6876be9c.png"
                  style="object-fit: fill; object-position: center;"
                />
              </picture>
            </div>
          </div>
          
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        手机号
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="输入手机号码"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          
          <div
            class="suffix"
          >
            <div
              class="suffix--line"
            />
            <div
              aria-role="button"
              class="verify"
            >
              发送验证码
            </div>
          </div>
          
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        价格
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          maxlength="-1"
          name=""
          placeholder="0.00"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          元
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        数量
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--right t-input--default"
          maxlength="-1"
          name=""
          placeholder="填写个数"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          个
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--error"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--error"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__tips t-input--left"
      >
        辅助说明
      </div>
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        不可编辑
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default t-input__control--disabled"
          disabled=""
          maxlength="-1"
          name=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;

exports[`Input > Input suffixVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入手机号码"
          type="text"
        />
        <!--v-if-->
        <div
          class="t-input__wrap--suffix"
        >
          
          <button
            aria-disabled="false"
            class="t-button t-button--size-extra-small t-button--base t-button--primary t-button--rectangle"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
               操作按钮 
              
            </span>
            <!---->
          </button>
          
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <div
    class="t-input t-input--layout-horizontal t-input--size-small t-input--border"
  >
    <div
      class="t-input__wrap--prefix"
    >
      <div
        class="t-input__icon--prefix"
      >
        <!--v-if-->
      </div>
      <div
        class="t-input__label"
      >
        标签文字
      </div>
    </div>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input__content t-input--default"
      >
        <input
          autocomplete="Off"
          class="t-input__control t-input--default"
          maxlength="-1"
          name=""
          placeholder="请输入文字"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
        <div
          class="t-input__wrap--suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-user-avatar"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 10.5c1.24 0 2.42.31 3.5.88v1.12h1v-1.14a.94.94 0 00-.49-.84 8.48 8.48 0 00-8.02 0 .94.94 0 00-.49.84v1.14h1v-1.12A7.47 7.47 0 018 10.5zM10.5 6a2.5 2.5 0 11-5 0 2.5 2.5 0 015 0zm-1 0a1.5 1.5 0 10-3 0 1.5 1.5 0 003 0z"
              fill="currentColor"
            />
            <path
              d="M2.5 1.5a1 1 0 00-1 1v11a1 1 0 001 1h11a1 1 0 001-1v-11a1 1 0 00-1-1h-11zm11 1v11h-11v-11h11z"
              fill="currentColor"
            />
          </svg>
          
        </div>
      </div>
      <!--v-if-->
    </div>
  </div>
  
</div>
`;
